name:                tryhaskell
version:             0.0.0.1
synopsis:            TryHaskell turkce versiyonu
-- description:
homepage:            https://github.com/TahsinGokalp/tryhaskell
license:             MIT
license-file:        LICENSE
author:              Tahsin Gokalp Saan
maintainer:          tahsinsaan@gmail.com
category:            Education
build-type:          Simple
-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:
cabal-version:       >=1.10
library
  -- Modules exported by the library.
  -- exposed-modules:
  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8
  -- Directories containing source files.
  hs-source-dirs:      src
  -- Base language which the package is written in.
  default-language:    Haskell2010